alignment issue solved in laptop view

--- a/css/style.css
+++ b/css/style.css
@@ -347,8 +347,8 @@ footer ul li {
     border-radius: 20px;
 }
 
-@media only screen and (min-width: 601px),
-(max-width: 900px) and (orientation: landscape) {
+@media only screen and
+(max-width: 900px) {
 
     .menu-rotate {
         display: none;
